--- a/src/app/dashboard/main-menu/main-menu.component.html
+++ b/src/app/dashboard/main-menu/main-menu.component.html
@@ -1,6 +1,9 @@
-<div class="card flex justify-content-center align-items-center h-screen">
-  <div class="flex flex-column gap-5">
-    <div class="username-form">
+<div class="flex flex-column align-items-center gap-5">
+  <h1>GAME OVER</h1>
+  <div class="result">
+    <div class="white-bg">
+      <h3>♔ White</h3>
+      <br />
       <label for="username1">Player 1</label>
       <input
         pInputText
@@ -10,8 +13,9 @@
         [(ngModel)]="username1"
       />
     </div>
-
-    <div class="username-form">
+    <div class="black-bg">
+      <h3>♚ Black</h3>
+      <br />
       <label for="username2">Player 2</label>
       <input
         pInputText
@@ -21,11 +25,13 @@
         [(ngModel)]="username2"
       />
     </div>
-
-    <p-button
-      label="Start Game"
-      class="flex justify-content-center"
-      (onClick)="startGame()"
-    />
   </div>
+
+  <p-button
+    label="Start Game"
+    [variant]="'outlined'"
+    severity="info"
+    size="large"
+    (onClick)="startGame()"
+  />
 </div>
