--- a/src/app/lobby/start-menu/start-menu.component.html
+++ b/src/app/lobby/start-menu/start-menu.component.html
@@ -10,7 +10,7 @@
         required
         minlength="4"
         placeholder="username"
-        [(ngModel)]="username1"
+        [(ngModel)]="username"
       />
     </div>
     <div class="black-bg">
@@ -22,7 +22,7 @@
         required
         minlength="4"
         placeholder="username"
-        [(ngModel)]="username2"
+        [(ngModel)]="opponent_username"
       />
     </div>
   </div>
