--- a/src/app/lobby/chess-board/chess-board.component.html
+++ b/src/app/lobby/chess-board/chess-board.component.html
@@ -1,13 +1,33 @@
 <div class="container">
-  <app-board-header [id]="id"></app-board-header>
-  <br />
-  <div class="board">
-    <div
-      *ngFor="let block of blocks"
-      class="block"
-      [ngClass]="{ dark: isDark(block.index), light: !isDark(block.index) }"
-    >
-      {{ block.piece ?? "" }}
+  <header>
+    <app-board-header [id]="id"></app-board-header>
+  </header>
+  <div class="body">
+    <div class="left-panel">
+      <!-- try to use <aside>
+        utilize <porgress> to show how much time does user has
+        use <picture> tag to show pictures of each piece
+        -->
+      <app-left-panel></app-left-panel>
+    </div>
+    <div class="board">
+      <h2>a</h2>
+      <h2>b</h2>
+      <h2>c</h2>
+      <h2>d</h2>
+      <h2>e</h2>
+      <h2>f</h2>
+      <h2>g</h2>
+      <h2>h</h2>
+      <div
+        *ngFor="let block of blocks"
+        class="block"
+        [ngClass]="{ dark: isDark(block.index), light: !isDark(block.index) }"
+      >
+        <button (click)="movePiece(block)">
+          {{ block.piece ?? "" }}
+        </button>
+      </div>
     </div>
   </div>
 </div>
