--- a/src/app/lobby/chess-board/chess-board.component.scss
+++ b/src/app/lobby/chess-board/chess-board.component.scss
@@ -2,19 +2,49 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  .body {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+  }
+
+  .left-panel {
+    position: absolute;
+    left: 0;
+    width: 400px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .board {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    padding: 10px;
+  }
+
+  .block {
+    width: 80px;
+    height: 80px;
+    font-size: 35px;
+  }
+
 }
 
-.board {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  padding: 10px;
+h2 {
+  margin: auto;
 }
 
-.block {
-  width: 80px;
-  height: 80px;
-  padding: 15px;
-  font-size: 35px;
+button {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border-style: none;
+  cursor: grab;
 }
 
 .dark {
