--- a/src/app/lobby/board-header/board-header.component.html
+++ b/src/app/lobby/board-header/board-header.component.html
@@ -1,4 +1,4 @@
 <div class="board-header">
-  <h1>{{ player1 }} VS {{ player2 }}</h1>
-  <h2>Time</h2>
+  <h1>{{ leftPlayer }} VS {{ rightPlayer }}</h1>
+  <h2>{{ time$ | async }}</h2>
 </div>
