rename and refactor

--- a/src/app/lobby/chess-board/chess-board.component.html
+++ b/src/app/lobby/chess-board/chess-board.component.html
@@ -30,8 +30,8 @@
         >
           <button>
             <img
-              *ngIf="getPieceIcon(block.piece!)"
-              [src]="getPieceIcon(block.piece!)"
+              *ngIf="block.iconUrl"
+              [src]="block.iconUrl"
               alt="{{ block.piece }}"
             />
           </button>
