--- a/src/app/lobby/board-header/board-header.component.html
+++ b/src/app/lobby/board-header/board-header.component.html
@@ -1,4 +1,6 @@
 <div class="board-header">
   <h1>{{ leftPlayer }} VS {{ rightPlayer }}</h1>
-  <h2>{{ time$ | async }}</h2>
+  <h2 *ngIf="time$ | async as time">
+    {{ time > 9 ? "00:" + time : "00:0" + time }}
+  </h2>
 </div>
