--- a/src/app/lobby/components/chess-board/chess-board.component.scss
+++ b/src/app/lobby/components/chess-board/chess-board.component.scss
@@ -1,69 +1,38 @@
 .body {
   display: flex;
-  justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
-  gap: 10vw;
-  box-sizing: border-box;
-  overflow-x: auto;
+  gap: 5vw;
 }
 
 app-left-panel {
-  width: 20vw;
-  height: 80vh;
+  margin-left: 5vw;
+  width: 25vw;
+  height: 90vh;
 }
 
-.chess-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.row-labels {
-  display: flex;
-  width: 90vmin;
-  max-width: 100vh;
-  text-align: center;
-
-  h2 {
-    margin: auto;
-  }
-}
-
-.board-container {
-  display: flex;
-  align-items: center;
-}
-
-.column-labels {
+.chessboard {
   display: grid;
   grid-template-rows: repeat(8, 1fr);
-  height: 90vmin;
-  max-height: 100vh;
-  width: 5vmin;
-
-  h2 {
-    display: flex;
-    align-items: center;
-    margin: 0;
-  }
+  width: 56vw;
+  height: 88vh;
 }
 
-.board {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(8, 1fr);
-  width: 90vmin;
-  height: 90vmin;
-  max-width: 100vh;
-  max-height: 100vh;
+.row {
+  display: flex;
 }
 
-.block {
+.cell {
+  width: 6vw;
+  height: 11vh;
   display: flex;
   align-items: center;
   justify-content: center;
+
+  &:hover {
+    border: 2px solid red;
+  }
 }
 
 .dark {
@@ -71,23 +40,22 @@ app-left-panel {
 }
 
 .light {
-  background-color: #d8d8d7;
+  background-color: #eeeed2;
 }
 
-button {
-  display: block;
-  width: 100%;
-  height: 100%;
-  background: transparent;
-  border: none;
-  cursor: grab;
-  font-weight: bold;
+img {
+  width: 10vw;
+  height: 10vh;
+}
 
-  img {
-    width: 90%;
-  }
+.rowIndex {
+  display: flex;
+  flex-direction: row;
+  margin-left: 4vw;
+  gap: 5vw;
 
-  &:hover {
-    border: 2px solid black;
+  h1 {
+    margin: 0;
+    padding: 0;
   }
 }
