--- a/src/app/lobby/components/start-menu/start-menu.component.scss
+++ b/src/app/lobby/components/start-menu/start-menu.component.scss
@@ -1,5 +1,3 @@
-/* Add this to your styles.css */
-
 .result {
   display: flex;
   flex-direction: row;
@@ -7,7 +5,8 @@
   gap: 50px;
 }
 
-.white-bg, .black-bg {
+.white-bg,
+.black-bg {
   padding: 15px;
   border-radius: 10px;
   color: white;
@@ -30,4 +29,7 @@
 
 .black-bg {
   background-color: #333;
+}
+h2 {
+  color: red;
 }
