finish auth and refactor

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -20,6 +20,7 @@
         pInputText
         placeholder="password"
         name="password"
+        type="password"
         [(ngModel)]="password"
         required
       />
