--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -31,6 +31,7 @@
         pInputText
         placeholder="password"
         name="password"
+        type="password"
         [(ngModel)]="password"
         required
       />
