--- a/src/app/lobby/components/left-panel/left-panel.component.scss
+++ b/src/app/lobby/components/left-panel/left-panel.component.scss
@@ -1,9 +1,21 @@
 form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  width: 100%;
   gap: 10px;
 
+  label {
+    align-content: start;
+  }
+
   input {
+    background-color: transparent;
+    width: 100%;
     padding: 10px;
+  }
+
+  p-button {
+    width: 100%;
   }
 }
