--- a/src/app/lobby/components/start-menu/start-menu.component.scss
+++ b/src/app/lobby/components/start-menu/start-menu.component.scss
@@ -28,8 +28,16 @@
 }
 
 .black-bg {
-  background-color: #333;
+  background-color: #3d4a2f;
 }
+
 h2 {
   color: red;
+}
+
+.btns {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
