--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -5,7 +5,7 @@
   align-items: center;
   width: 100vw;
   height: 80vh;
-  h2 {
+  h1 {
     color: white;
     font-size: 50px;
     margin-bottom: 20px;
@@ -15,22 +15,31 @@
     width: 40vw;
     padding: 50px;
     text-align: center;
-    background-color: #020d1f;
+    background-color: #031d46;
     box-shadow: 1px 5px 10px white;
     display: flex;
     flex-direction: column;
     gap: 20px;
 
-    .field {
+    .form-group {
       display: flex;
       flex-direction: column;
       align-items: start;
+
+      label {
+        padding: 5px;
+      }
 
       input {
         background-color: transparent;
         padding: 12px;
         font-size: 20px;
         width: 100%;
+      }
+
+      .text-danger {
+        color: red;
+        padding: 5px;
       }
     }
   }
