--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -12,7 +12,7 @@
       />
       <div
         *ngIf="
-          loginForm.controls['username'].touched &&
+          loginForm.controls['username']?.touched &&
           loginForm.controls['username'].invalid
         "
         class="text-danger"
@@ -33,8 +33,8 @@
       />
       <div
         *ngIf="
-          loginForm.controls['password'].touched &&
-          loginForm.controls['password'].invalid
+          loginForm.controls['password']?.touched &&
+          loginForm.controls['password']?.invalid
         "
         class="text-danger"
       >
@@ -43,7 +43,7 @@
     </div>
 
     <p-button
-      label="SignIn"
+      label="Sign In"
       severity="contrast"
       [style]="{ width: '100%' }"
       [disabled]="!loginForm.valid"
